--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
 		<title>Leonora Bateman DigiCV</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
-		<link rel="stylesheet" href="https://github.com/leonorabateman/leonorabateman.github.io/blob/7f6b2b817b49ceee2436fc9c0946f7834bf6abef/main.css" />
-		<noscript><link rel="stylesheet" href="https://github.com/leonorabateman/leonorabateman.github.io/blob/59e8fa03aa77d55d3a819555d762a3cb401a2597/noscript.css" /></noscript>
+		<link rel="stylesheet" href="main.css" />
+		<noscript><link rel="stylesheet" href="noscript.css" /></noscript>
 	</head>
 	<body class="is-preload">
 
