--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 							<li><a href="#intro">Welcome</a></li>
 							<li><a href="#one">Professional History</a></li>
 							<li><a href="#two">Qualifications</a></li>
-							<li><a href="#three">Projects</a></li>
+							<!-- <li><a href="#three">Projects</a></li> -->
 						</ul>
 					</nav>
 				</div>
@@ -131,7 +131,7 @@
 						</div>
 					</section>
 
-				<!-- Three -->
+				<!-- Three 
 					<section id="three" class="wrapper style1 fade-up">
 						<div class="inner">
 							<h2>Projects</h2>
@@ -192,7 +192,7 @@
 
 			</div>
 
-		<!-- Footer -->
+		<!-- Footer 
 			<footer id="footer" class="wrapper style1-alt">
 				<div class="inner">
 					<ul class="menu">
@@ -200,7 +200,7 @@
 					</ul>
 				</div>
 			</footer>
-
+--> 
 		<!-- Scripts -->
 			<script src="jquery.min.js"></script>
 			<script src="jquery.scrollex.min.js"></script>
