--- a/index.html
+++ b/index.html
@@ -94,6 +94,12 @@
 							<h2>Qualifications</h2>
 							<div class="features">
 								<section>
+									<span class="icon major fa-certificate"></span>
+									<h3>TechTalent Academy</h3>
+									<p>AWS re/Start Cloud Pratitioner course</p>
+									<p>(Examination Pending)</p>
+								</section>
+								<section>
 									<span class="icon solid major fa-certificate"></span>
 									<h3>City & Guilds</h3>
 									<p>Level 3 Certificate in ICT Systems and Principles</p>
@@ -119,11 +125,6 @@
 									<span class="icon solid major fa-certificate"></span>
 									<h3>Castle View Enterprise Academy</h3>
 									<p>GCSE Maths, English Language, English Literature, Biology, Chemistry, Physics, Psychology and French</p>
-								</section>
-								<section>
-									<span class="icon major fa-certificate"></span>
-									<h3>Aliquam urna dapibus</h3>
-									<p>Phasellus convallis elit id ullam corper amet et pulvinar. Duis aliquam turpis mauris, sed ultricies erat dapibus.</p>
 								</section>
 							</div>
 							<ul class="actions">
