--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <!--
-	Leonora Bateman DigiCV
+	Leonora Rivers DigiCV
 -->
 <html>
 	<head>
-		<title>Leonora Bateman DigiCV</title>
+		<title>Leonora Rivers DigiCV</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="main.css" />
