--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <!--
-	Leonora Bateman DigiCV
+	Leonora Rivers DigiCV
 -->
 <html>
 	<head>
-		<title>Leonora Bateman DigiCV</title>
+		<title>Leonora Rivers DigiCV</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="main.css" />
@@ -32,8 +32,8 @@
 				<!-- Intro -->
 					<section id="intro" class="wrapper style1 fullscreen fade-up">
 						<div class="inner">
-							<h1>Leonora Bateman</h1>
-							<p>Experienced Application Support Analyst with a demonstrated history of working in the Information Technology industry </a><br />
+							<h1>Leonora Rivers</h1>
+							<p>Experienced Support Engineer with a demonstrated history of working in the Information Technology industry </a><br />
 								with knowledge in AWS Cloud Servcies, Incident and knowledge Management, Python, Linux, Customer Support, and ITIL</a>.</p>
 							<ul class="actions">
 							</ul>
@@ -46,8 +46,8 @@
 							<a href="#" class="image"><img src="images/pic01.jpg" alt="" data-position="center center" /></a>
 							<div class="content">
 								<div class="inner">
-									<h2>Self-employment (March 2018 - Present)</h2>
-									<p>Following my role at RIBA I made the decision to go self employed, since then I have been working part time for myself doing ad hoc IT and website support as well as supporting small businesses with the implementation of IT services to improve their running efficiency.</p>
+									<h2>Mandata (April 2022 - Present)</h2>
+									<p>I have been working at Mandata since leaving Totally Group, supporting 100% bespoke cloud SaaS for the haulage and logistics sector. As part of a rapidly growing company, I have had the pleasure of dealing with several well known companies, and the privilege to provide them with fantastic customer service. My responsibilities in this role include, but are not limited to, second line support and investigation, fulfilling bespoke customer portal creations, assisting with implementation of our services to customers, and maintaining, managing and investigating data across all of our servers.</p>
 									<ul class="actions">
 									</ul>
 								</div>
@@ -57,8 +57,8 @@
 							<a href="#" class="image"><img src="images/pic02.jpg" alt="" data-position="top center" /></a>
 							<div class="content">
 								<div class="inner">
-									<h2>RIBA Enterprises (January 2018 - March 2018)</h2>
-									<p>I worked full time at the Royal Institute of British Architects for three months on their internal Business Systems team. My responsibilities were to the Service Desk team within Business Systems, assisting employees with both software and hardware issues face to face, over the phone and remotely. </p>
+									<h2>Totally Group (August 2021 - April 2022)</h2>
+									<p>After completing the AWS re/Start course I started work at Totally Group, primarily supporting the NHS 111 systems for several areas across the country whilst providing end user support to approximately 2,000 users across the Vocare/Totally PLC estate. My Responsibilities included providing first and second line support for general software and hardware issues as well as supporting the main application for the business to ensure patient safety as well as delivering quality care. </p>
 									<ul class="actions">
 									</ul>
 								</div>
