--- a/index.html
+++ b/index.html
@@ -33,8 +33,7 @@
 					<section id="intro" class="wrapper style1 fullscreen fade-up">
 						<div class="inner">
 							<h1>Leonora Rivers</h1>
-							<p>Experienced Support Engineer with a demonstrated history of working in the Information Technology industry, </a><br />
-								with knowledge in AWS Cloud Servcies, Incident and knowledge Management, Python, Linux, Customer Support, and ITIL</a>.</p>
+							<p>Experienced Support Engineer with a demonstrated history of working in the Information Technology industry,with knowledge in AWS Cloud Servcies, Incident and knowledge Management, Python, Linux, Customer Support, and ITIL</a>.</p>
 							<ul class="actions">
 							</ul>
 						</div>
